--- a/test.ini
+++ b/test.ini
@@ -2,30 +2,8 @@
 base = "rss/"
 
 [source001]
-name = "mckinsey_rss.xml"
-url = "http://www.mckinsey.com/insights/rss"
-max = "10"
-md5 = "0b79e7f21cc1db5b6a378d5dfe515069"
+name = "nature.xml"
+url = "https://www.nature.com/nature.rss"
+max = "50"
+md5 = ""
 action = "auto"
-
-[source002]
-name = "mckinsey_iw_rss.xml"
-url = "http://www.mckinsey.com/insights/rss"
-max = "10"
-md5 = "0b79e7f21cc1db5b6a378d5dfe515069"
-action = "en->iw"
-
-[source003]
-name = "nature_rss.xml"
-url = "http://rss.acast.com/nature"
-max = "10"
-md5 = "a620d5ac050112037f8808d2064d692c"
-action = "auto"
-
-[source004]
-name = "BBC_Top_Stories_rss.xml"
-url = "http://feeds.bbci.co.uk/news/rss.xml"
-max = "10"
-md5 = "fa13d5aec99f758281e53fafa3b94b20"
-action = "en->zh-CN"
-
