--- a/test.ini
+++ b/test.ini
@@ -8,3 +8,9 @@ max = "50"
 md5 = "87cd44a235b733bcd854c6e90895e7eb"
 action = "auto"
 
+[source002]
+name = "prl.xml"
+url = "http://feeds.aps.org/rss/recent/prl.xml"
+max = "50"
+md5 = ""
+action = "auto"
